--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Wonchan
+first_name: WONCHAN
 middle_name:
-last_name: Choi
+last_name: CHOI
 contact_note: > 
 description: > 
 footer_text: >
