--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: WONCHAN
 middle_name:
 last_name: CHOI
-contact_note: > 
-description: > 
+contact_note: > Email: wchoi@uwm.edu
+description: > Associate Professor @ UMW iSchool
 footer_text: >
   
 keywords: 
@@ -325,7 +325,7 @@ max_author_limit:
 more_authors_animation_delay: 10 # more authors are revealed on click using animation; smaller delay means faster animation
 
 # Enables publication thumbnails. If disabled, none of the publications will display thumbnails, even if specified in the bib entry.
-enable_publication_thumbnails: true
+enable_publication_thumbnails: false
 
 # -----------------------------------------------------------------------------
 # Jekyll Link Attributes
