--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: WONCHAN
 middle_name:
 last_name: CHOI
-contact_note: > Email: wchoi@uwm.edu
+contact_note: > 
 description: > Associate Professor @ UMW iSchool
 footer_text: >
   
