--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: WONCHAN
 middle_name:
 last_name: CHOI
 contact_note: > 
-description: > Associate Professor @ UMW iSchool
+description: > 
 footer_text: >
   
 keywords: 
