--- a/_config.yml
+++ b/_config.yml
@@ -149,6 +149,7 @@ collections:
     output: true
   projects:
     output: true
+    permalink: /projects/:name/
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
