--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,8 +1,8 @@
 "Journal":
-  color: "#81d8d0"
+  color: "#2596be"
 
 "ConfProc":
-  color: "#99ccff"
+  color: "#2596be"
 
 "Best Paper Nominated":
   color: "#ff6699"
