--- a/_config.yml
+++ b/_config.yml
@@ -319,6 +319,7 @@ filtered_bibtex_keywords:
     supp,
     video,
     website,
+    preprint,
   ]
 
 # Maximum number of authors to be shown for each publication (more authors are visible on click)
