--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -41,7 +41,7 @@ scholar_userid: "p5_1GbgAAAAJ" # your Google Scholar ID
 # whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 # wikidata_id: # your wikidata id
 # wikipedia_id: # your wikipedia id (Case sensitive)
-work_url: https://uwm.edu/informationstudies/directory/choi-wonchan/
+work_url: "https://uwm.edu/informationstudies/directory/choi-wonchan/"
 # x_username: # your X handle
 # youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 # zotero_username: # your zotero username
