--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,3 +1,14 @@
+"ConfProc":
+  color: "#32c96f"
+
+"Journal":
+  color: "#1165D4"
+
+
+
+
+
+
 "TEL":
   url: https://www.emeraldgrouppublishing.com/journal/el
   color: "#1165D4"
